[package]
name = "risk-manager"
description = 'Pallet for risk manager implementation'
version = "0.6.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
accounts = { path = "../accounts", default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0' }
sp-io = { version = '2.0.0' }

orml-tokens = { path = "../../orml/tokens" }

accounts = { path = "../accounts" }
liquidity-pools = { path = "../liquidity-pools" }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-std/std",
    "sp-runtime/std",
    "minterest-primitives/std",
]