[package]
name = "risk-manager"
description = 'Pallet for risk manager implementation'
version = "0.6.2"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
liquidation-pools = { path = "../liquidation-pools", default-features = false }
pallet-traits = { path = "../traits", default-features = false }
controller = { path = "../controller", default-features = false }
accounts = { path = "../accounts", default-features = false }
oracle = { path = "../oracle", default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0' }
sp-io = { version = '2.0.0' }

orml-tokens = { path = "../../orml/tokens" }

liquidity-pools = { path = "../liquidity-pools" }
liquidation-pools = { path = "../liquidation-pools" }
oracle = { path = "../oracle" }
controller = { path = "../controller" }
accounts = { path = "../accounts" }
minterest-model = { path = "../minterest-model" }


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",

    "orml-utilities/std",
    "orml-traits/std",

    "minterest-primitives/std",
    "liquidity-pools/std",
    "liquidation-pools/std",
    "controller/std",
    "accounts/std",
]
