[package]
name = "token"
version = "0.1.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

[package.metadata.substrate]
categories = [
    "Pallet",
    "Token",
    "Accounts",
    "Assets",
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }

# Substrate packages
balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
num-traits = { version = '0.2.12', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
serde = { version = "1.0.101", optional = true }

[dev-dependencies]
# Substrate packages
sp-core = { version = '2.0.0', default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'parity-scale-codec/std',
    'sp-runtime/std',
    'serde',
]
