[package]
name = "pallet-traits"
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-arithmetic = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }

orml-traits = { version = "0.4.0", default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "frame-support/std",

    "orml-traits/std",
    "orml-utilities/std",

    "minterest-primitives/std",
]
