[package]
name = "pallet-traits"
version = "0.5.0"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3", default-features = false }

orml-traits =  { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
orml-utilities =  { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false}

minterest-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "frame-support/std",

    "orml-traits/std",
    "orml-utilities/std",

    "minterest-primitives/std",
]
