[package]
name = "whitelist-module"
description = "Pallet for managing whitelist mode."
version = "0.6.0"
authors = ["Minterest Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
sp-std = { version = "3.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"

pallet-balances = "3.0.0"

minterest-primitives = { path = "../../primitives" }
test-helper = { path = "../../test-helper" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
